k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: user-management

  labels:
    app: user-management
    environment: minikube
