k8s/07-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: user-management

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

        - name: backend

          image: user-management-backend:v1

          imagePullPolicy: Never

          ports:

            - containerPort: 8080

          resources:

            requests:
              memory: "512Mi"
              cpu: "250m"

            limits:
              memory: "1Gi"
              cpu: "500m"

          # livenessProbe:

          #   httpGet:
          #     path: /actuator/health
          #     port: 8080

          #   initialDelaySeconds: 60
          #   periodSeconds: 20

          # readinessProbe:

          #   httpGet:
          #     path: /actuator/health
          #     port: 8080

          #   initialDelaySeconds: 30
          #   periodSeconds: 10
