k8s/09-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: user-management

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      containers:

        - name: frontend

          image: user-management-frontend:v1

          imagePullPolicy: IfNotPresent

          ports:

            - containerPort: 80

          resources:

            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "256Mi"
              cpu: "250m"

          livenessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 10
            periodSeconds: 5
