k8s/06-postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: user-management

spec:

  type: ClusterIP

  selector:
    app: postgres

  ports:

    - port: 5432
      targetPort: 5432
