k8s/08-backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: user-management

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
