k8s/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: user-management-ingress
  namespace: user-management

spec:
  ingressClassName: nginx

  rules:
    - host: usermanagement.local
      http:
        paths:

        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8080

        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
